# setup-python-poetry-version-example

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: default-example-install-poetry.yml  default-example.yml  experiment-with-poetry-prerelease.yml
pkg/: __init__.py
tests/: test_test.py
